[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/config/config_templates/component_config_custom_config.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.788235, 0.258824, 0.141176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TemplateCustomConfig" type="VBoxContainer"]
margin_top = 381.0
margin_right = 1900.0
margin_bottom = 976.0
size_flags_vertical = 3
custom_constants/separation = 1
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
margin_right = 1900.0
margin_bottom = 20.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 0
text = "Description"

[node name="CustomConfigValue" type="TextEdit" parent="."]
margin_top = 21.0
margin_right = 1900.0
margin_bottom = 595.0
rect_min_size = Vector2( 0, 200 )
size_flags_vertical = 3
custom_colors/current_line_color = Color( 0.0588235, 0.2, 0.337255, 0.243137 )
text = "test"
highlight_current_line = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
wrap_enabled = true

[node name="ErrorOutline" type="Panel" parent="CustomConfigValue"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="CheckParseTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="CheckParseTimer" to="." method="_on_CheckParseTimer_timeout"]
